added enviroment parameter cors origin which relays on app private ip

--- a/ansible/roles/api/templates/api.env.j2
+++ b/ansible/roles/api/templates/api.env.j2
@@ -4,6 +4,7 @@ ADMIN_EMAIL='{{ admin_email }}'
 DATABASE_URL='{{ db_url_string }}'
 RESET_SECRET='{{ reset_secret }}'
 FRONTEND_URL='https://{{ app_domain }}'
+CORS_ORIGIN='http://{{ app_private_address }}:3000'
 SMTP_USERNAME='{{ smtp_username }}'
 SMTP_PASSWORD='{{ smtp_password }}'
 SMTP_SERVER='{{ smtp_server }}'
