added google client id and client key enviroment variables

--- a/ansible/roles/api/templates/api.env.j2
+++ b/ansible/roles/api/templates/api.env.j2
@@ -1,4 +1,6 @@
 APP_NAME='{{ app_name }}'
+CLIENT_ID='{{ client_id }}'
+CLIENT_KEY='{{ client_key }}'
 JWT_SECRET='{{ jwt_secret }}'
 ADMIN_EMAIL='{{ admin_email }}'
 DATABASE_URL='{{ db_url_string }}'
