added backend url to enviroment vairables

--- a/ansible/roles/api/templates/api.env.j2
+++ b/ansible/roles/api/templates/api.env.j2
@@ -5,6 +5,7 @@ JWT_SECRET='{{ jwt_secret }}'
 ADMIN_EMAIL='{{ admin_email }}'
 DATABASE_URL='{{ db_url_string }}'
 RESET_SECRET='{{ reset_secret }}'
+BACKEND_URL='https://{{ api_domain }}'
 FRONTEND_URL='https://{{ app_domain }}'
 CORS_ORIGIN='http://{{ app_private_address }}:3000'
 SMTP_USERNAME='{{ smtp_username }}'
